add swagger add getFromRepo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 exercise.url =https://opentdb.com/api.php
+
+#mongodb
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=exercise
+
+#logging
+logging.level.org.springframework.data=debug
+logging.level.=error
